# coderag-cli

./: .dockerignore  .mcp.json  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  install-coderag.sh  install-skill.sh  pyproject.toml  setup-mcp.sh
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmark/: cost_prompts.json
docs/: docker.md
docs/benchmarks/: baseline-profile.json  benchmark-10repos.md  benchmark-15repos-jsts.json  benchmark-15repos-jsts.md  benchmark-mixed-report.md  benchmark-mixed-results.json  benchmark-styling.md  performance-optimization-report.md  python-benchmark-data.json  python-benchmark-report.md
docs/dogfood/: dogfood-log-session5.md  dogfood-log-session6.md  dogfood-log-session7.md
docs/plan/: ux-session-roadmap.md
docs/wiki/: CLI-Reference.md  Configuration.md  Home.md  Installation.md  MCP-Server-Setup.md  README.md
scripts/: docker-entrypoint.sh
skill/: SKILL.md
src/coderag/: __main__.py
src/coderag/analysis/: __init__.py  networkx_analyzer.py
src/coderag/cli/: __init__.py  benchmark_cost.py  launch.py  main.py  update.py
src/coderag/core/: config.py  models.py
src/coderag/enrichment/: __init__.py  git_enricher.py  phpstan.py
src/coderag/export/: __init__.py  exporter.py
src/coderag/mcp/: server.py  token_tools.py  tools.py
src/coderag/output/: __init__.py  context.py  markdown.py
src/coderag/pipeline/: orchestrator.py  resolver.py
src/coderag/plugins/javascript/: __init__.py  plugin.py
src/coderag/plugins/javascript/frameworks/: __init__.py  nextjs.py  vue.py
src/coderag/plugins/php/: __init__.py  plugin.py
src/coderag/plugins/php/frameworks/: __init__.py  symfony.py
src/coderag/plugins/python/: __init__.py  plugin.py  resolver.py
src/coderag/plugins/python/frameworks/: __init__.py  django.py  fastapi.py  flask.py
src/coderag/plugins/scss/: __init__.py  extractor.py  plugin.py  resolver.py
src/coderag/plugins/typescript/: __init__.py  extractor.py  plugin.py
src/coderag/plugins/typescript/frameworks/: __init__.py  angular.py
src/coderag/search/: __init__.py  embedder.py  hybrid.py  vector_store.py
src/coderag/session/: __init__.py  cost_models.py  token_tracker.py
src/coderag/storage/: sqlite_store.py
src/coderag/tui/: app.py
src/coderag/tui/screens/: __init__.py  summary.py
src/coderag/tui/styles/: dashboard.tcss
src/coderag/updater/: __init__.py  checker.py  config.py  installer.py
tests/: conftest.py  test_angular_detector_coverage.py  test_benchmark_cost.py  test_cli_coverage.py  test_cli_coverage2.py  test_config.py  test_cost_models.py  test_coverage_boost.py  test_coverage_boost10.py  test_coverage_boost11.py  test_coverage_boost12.py  test_coverage_boost13.py  test_coverage_boost14.py  test_coverage_boost2.py  test_coverage_boost3.py  test_coverage_boost4.py  test_coverage_boost5.py  test_coverage_boost6.py  test_coverage_boost7.py  test_coverage_boost8.py  test_coverage_boost9.py  test_css_extractor_coverage.py  test_css_plugin.py  test_css_resolver_coverage.py  test_django_detector_extra.py  test_django_detector_final.py  test_django_detector_full.py  test_docker_build.py  test_enrichment.py  test_export.py  test_fastapi_detector_coverage.py  test_framework_detectors.py  test_frameworks.py  test_git_enricher.py  test_hot_reload.py  test_js_extractor_cov.py  test_js_framework_detectors_coverage.py  test_js_plugin.py  test_js_resolver_coverage.py  test_laravel_detector.py  (+58 more)
