[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderag"
version = "0.1.0"
description = "Custom PHP/JS/TS codebase parser that builds knowledge graphs for LLM context retrieval"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dominik Horváth"},
]
keywords = ["ast", "parser", "knowledge-graph", "mcp", "llm", "code-analysis"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "click>=8.1",
    "rich>=13.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.scripts]
coderag = "coderag.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
