[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderag"
version = "0.1.0"
description = "Build knowledge graphs from your codebase for LLM context retrieval — supports PHP, JavaScript, and TypeScript with framework detection and MCP server integration."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dominik Horváth"},
]
keywords = [
    "ast",
    "parser",
    "knowledge-graph",
    "mcp",
    "llm",
    "code-analysis",
    "tree-sitter",
    "static-analysis",
    "codebase",
    "php",
    "javascript",
    "typescript",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "click>=8.1",
    "rich>=13.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/dmnkhorvath/coderag"
Repository = "https://github.com/dmnkhorvath/coderag"
Issues = "https://github.com/dmnkhorvath/coderag/issues"
Documentation = "https://github.com/dmnkhorvath/coderag#readme"

[project.scripts]
coderag = "coderag.cli.main:cli"
codegraph = "coderag.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coderag = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
