[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coderag-cli"
version = "0.1.0"
description = "Build knowledge graphs from your codebase for LLM context retrieval — supports PHP, JavaScript, and TypeScript with framework detection and MCP server integration."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dominik Horváth"},
]
keywords = [
    "ast",
    "parser",
    "knowledge-graph",
    "mcp",
    "llm",
    "code-analysis",
    "tree-sitter",
    "static-analysis",
    "codebase",
    "php",
    "javascript",
    "typescript",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-css>=0.23.0",
    "tree-sitter-scss>=0.0.1",
    "tree-sitter-go>=0.23.0",
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "click>=8.1",
    "rich>=13.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
semantic = [
    "fastembed>=0.3.0",
    "faiss-cpu>=1.7.0",
]
tui = [
    "textual>=1.0.0",
    "psutil>=5.9.0",
]
community = [
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "build>=1.0",
]

full = [
    "fastembed>=0.3.0",
    "faiss-cpu>=1.7.0",
    "textual>=1.0.0",
    "psutil>=5.9.0",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
]

all = [
    "fastembed>=0.3.0",
    "faiss-cpu>=1.7.0",
    "textual>=1.0.0",
    "psutil>=5.9.0",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "build>=1.0",
]
[project.urls]
Homepage = "https://github.com/dmnkhorvath/coderag"
Repository = "https://github.com/dmnkhorvath/coderag"
Issues = "https://github.com/dmnkhorvath/coderag/issues"
Documentation = "https://github.com/dmnkhorvath/coderag#readme"

[project.scripts]
coderag = "coderag.cli.main:cli"
codegraph = "coderag.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coderag = ["py.typed", "tui/styles/*.tcss"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/coderag/plugins/javascript/extractor.py" = ["N806"]
"src/coderag/plugins/scss/extractor.py" = ["E402"]
"tests/*" = ["E402", "N806", "N802", "F811", "F841"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
strict = false
disable_error_code = [
    "call-arg",
    "arg-type",
    "assignment",
    "union-attr",
    "override",
    "attr-defined",
    "return-value",
    "no-redef",
    "misc",
    "index",
    "var-annotated",
    "abstract",
    "import-untyped",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
